--- a/web.html
+++ b/web.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h1>
-            Hello guys! welcome this project. hahaha
+            Hello guys! welcome this project.
         </h1>
     </div>
 </body>
