--- a/web.html
+++ b/web.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-    <div>
+    <div id="container">
+        <div id="post">
         <h1>
             Hello guys! welcome this project.
         </h1>
         <p>This is initial </p>
+        </div>
     </div>
 </body>
 </html>
