--- a/web.html
+++ b/web.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            cabecera
+        </div>
         <div id="post">
         <h1>
             Hello guys! welcome this project.
