--- a/web.html
+++ b/web.html
@@ -9,7 +9,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            Hyperblog
+            <span id="tagline">your blog </span>
         </div>
         <div id="post">
         <h1>
