agregado mas contenido

--- a/web.html
+++ b/web.html
@@ -13,6 +13,7 @@
             Hello guys! welcome this project.
         </h1>
         <p>This is initial </p>
+        <p>everyday, I study but improve this blog </p>
         </div>
     </div>
 </body>
