--- a/web.html
+++ b/web.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">your blog </span>
+            <span id="tagline">your cabecera blog  </span>
         </div>
         <div id="post">
         <h1>
@@ -18,6 +18,7 @@
         </h1>
         <p>This is initial </p>
         <p>everyday, I study but improve this blog </p>
+        <p>came on</p>
         </div>
     </div>
 </body>
