color de fondo y puesta de logo

--- a/web.html
+++ b/web.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/tecnology.png" />
             Hyperblog
             <span id="tagline">your cabecera blog  </span>
         </div>
