--- a/web.html
+++ b/web.html
@@ -18,7 +18,9 @@
             Hello guys! welcome this project.
         </h1>
         <p>This is initial </p>
-        <p>everyday, I study but improve this blog </p>
+        <p>everyday, I study but improve this blog
+            I use all my experience in software.
+        </p>
         <p>came on</p>
         </div>
         <div id="footer">
