--- a/web.html
+++ b/web.html
@@ -18,8 +18,8 @@
             Hello guys! welcome this project.
         </h1>
         <p>This is initial </p>
-        <p>everyday, I study but improve this blog
-            I use all my experience in software.
+        <p>everyday, I study but improve this blog <br>
+            I use all my <em>experience</em> in software.
         </p>
         <p>came on</p>
         </div>
