--- a/web.html
+++ b/web.html
@@ -21,6 +21,7 @@
         <p>everyday, I study but improve this blog <br>
             I use all my <em>experience</em> in software.
         </p>
+        <p><img src="imagenes/space.jpg" width="100%" /></p>
         <p>came on</p>
         </div>
         <div id="footer">
